[tool.poetry]
name = "nython"
version = "0.1.0"
description = "Seamless Nim extension modules for Python"
authors = ["Seth Stadick <sstadick@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sstadick/nython"
repository = "https://github.com/sstadick/nython"
keywords = ["nim", "extension"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.761"
pylint = "^2.4.4"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
