[tool.poetry]
name = "ponim"
version = "0.1.0"
description = ""
authors = ["Seth Stadick <sstadick@gmail.com>"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.7"
setuptools = "^45.2.0"
nython = {path = ".."}

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = {version = "^19.10b0", allow-prereleases = true}
pytest-virtualenv = "^1.7.0"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
